# AI-Strategy-Game

MinimaxGame/: CMakeLists.txt  main.cpp
MinimaxGame/forms/: board.ui  mainwindow.ui
MinimaxGame/include/: ai.h  board.h  graphicsscene.h  mainwindow.h  minimaxgame.h  tilewidget.h  virtualboard.h  virtualtile.h
MinimaxGame/src/: ai.cpp  board.cpp  graphicsscene.cpp  mainwindow.cpp  tilewidget.cpp  virtualboard.cpp  virtualtile.cpp
